// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: projection > ( { x: 1, y: 2 } ).x 1`] = `
{
  "displays": {
    "constraints": [
      "2 ~~ ?5",
      "Num ~~ ?6",
      "1 ~~ ?2",
      "Num ~~ ?3",
      "Schema [ x: Num, y: Num ] ~~ Schema [ x: Num, y: Num ]",
    ],
    "term": "(Struct [ x: 1, y: 2 ]).x",
    "type": "Num",
  },
}
`;

exports[`inference: projection > ( { x: 1, y: 2 } ).x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 39,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 2,
          },
        },
        "lvl": 0,
        "right": {
          "id": 35,
          "type": "Neutral",
          "value": {
            "id": 34,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 38,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 37,
          "type": "Neutral",
          "value": {
            "id": 36,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 41,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "lvl": 0,
        "right": {
          "id": 29,
          "type": "Neutral",
          "value": {
            "id": 28,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 40,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 31,
          "type": "Neutral",
          "value": {
            "id": 30,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "arg": {
            "id": 46,
            "row": {
              "label": "x",
              "row": {
                "label": "y",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 38,
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "extension",
              "value": {
                "id": 40,
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "id": 42,
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "id": 47,
          "type": "App",
        },
        "lvl": 0,
        "right": {
          "arg": {
            "id": 43,
            "row": {
              "label": "x",
              "row": {
                "label": "y",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 38,
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "extension",
              "value": {
                "id": 40,
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "id": 42,
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "id": 44,
          "type": "App",
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 33,
          "type": "Neutral",
          "value": {
            "id": 32,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "id": 1211,
      "label": "x",
      "term": {
        "arg": {
          "id": 1209,
          "row": {
            "label": "x",
            "row": {
              "label": "y",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "id": 1206,
                "type": "Lit",
                "value": {
                  "type": "Num",
                  "value": 2,
                },
              },
            },
            "type": "extension",
            "value": {
              "id": 1207,
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 1208,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "id": 1210,
        "type": "App",
      },
      "type": "Proj",
    },
    "type": {
      "id": 40,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Num",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: projection > \\obj -> obj.x 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ x: ?2 | ?3 ] ~~ ?1",
    ],
    "term": "λobj -> (obj).x",
    "type": "Π(obj: ?1) -> (closure: ?2 -| Γ: obj)",
  },
}
`;

exports[`inference: projection > \\obj -> obj.x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "arg": {
            "id": 34,
            "row": {
              "label": "x",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 3,
                },
              },
              "type": "extension",
              "value": {
                "id": 33,
                "type": "Neutral",
                "value": {
                  "id": 32,
                  "type": "Var",
                  "variable": {
                    "lvl": 1,
                    "type": "Meta",
                    "val": 2,
                  },
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "id": 31,
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "id": 35,
          "type": "App",
        },
        "lvl": 1,
        "right": {
          "id": 26,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 2,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
    },
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "icit": "Explicit",
        "type": "Lambda",
        "variable": "obj",
      },
      "body": {
        "id": 1207,
        "label": "x",
        "term": {
          "id": 1205,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "type": "Proj",
      },
      "id": 1208,
      "type": "Abs",
    },
    "type": {
      "binder": {
        "annotation": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "obj",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "metas": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "id": 1209,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "Closure",
      },
      "id": 36,
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: projection > { let proj = \\obj -> obj.x; } 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ x: ?3 | ?4 ] ~~ ?2",
      "Π(obj: ?2) -> (closure: (?3 :: Type) -| Γ: obj; proj = proj) ~~ ?1",
      "0 <= ω",
    ],
    "term": "{
	let proj
	: Π(a: Row) => (closure: Π(b: Type) => Π(obj: Schema [ x: b | a ]) -> b -| Γ: a; proj = proj)
	= λa => λb => λobj -> (obj).x;
	return unit;
	}",
    "type": "Unit",
  },
}
`;

exports[`inference: projection > { let proj = \\obj -> obj.x; } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "arg": {
            "id": 38,
            "row": {
              "label": "x",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 2,
                  "type": "Meta",
                  "val": 4,
                },
              },
              "type": "extension",
              "value": {
                "id": 37,
                "type": "Neutral",
                "value": {
                  "id": 36,
                  "type": "Var",
                  "variable": {
                    "lvl": 2,
                    "type": "Meta",
                    "val": 3,
                  },
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "id": 35,
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "id": 39,
          "type": "App",
        },
        "lvl": 2,
        "right": {
          "id": 30,
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "binder": {
            "annotation": {
              "id": 31,
              "type": "Neutral",
              "value": {
                "id": 30,
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "obj",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Let",
                    "variable": "proj",
                  },
                  "nf": {
                    "id": 29,
                    "type": "Neutral",
                    "value": {
                      "id": 28,
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Let",
                      "variable": "proj",
                    },
                    "source",
                    {
                      "id": 27,
                      "type": "Neutral",
                      "value": {
                        "id": 26,
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "implicits": [],
              "metas": {},
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "id": 1210,
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 3,
              },
            },
            "type": "Closure",
          },
          "id": 40,
          "type": "Abs",
        },
        "lvl": 1,
        "right": {
          "id": 27,
          "type": "Neutral",
          "value": {
            "id": 26,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
      {
        "computed": "Zero",
        "expected": "Many",
        "type": "usage",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 2,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "id": 1242,
      "return": {
        "id": 1241,
        "type": "Lit",
        "value": {
          "type": "unit",
        },
      },
      "statements": [
        {
          "annotation": {
            "binder": {
              "annotation": {
                "id": 2,
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Row",
                },
              },
              "icit": "Implicit",
              "type": "Pi",
              "variable": "a",
            },
            "closure": {
              "ctx": {
                "env": [
                  {
                    "name": {
                      "type": "Let",
                      "variable": "proj",
                    },
                    "nf": {
                      "id": 44,
                      "type": "Neutral",
                      "value": {
                        "id": 43,
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Bound",
                        },
                      },
                    },
                    "type": [
                      {
                        "type": "Let",
                        "variable": "proj",
                      },
                      "source",
                      {
                        "id": 27,
                        "type": "Neutral",
                        "value": {
                          "id": 26,
                          "type": "Var",
                          "variable": {
                            "lvl": 0,
                            "type": "Meta",
                            "val": 1,
                          },
                        },
                      },
                    ],
                  },
                ],
                "implicits": [],
                "metas": {
                  "1": {
                    "ann": {
                      "id": 1,
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 1,
                    },
                  },
                  "2": {
                    "ann": {
                      "id": 1,
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 1,
                      "type": "Meta",
                      "val": 2,
                    },
                  },
                  "3": {
                    "ann": {
                      "id": 1,
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 2,
                      "type": "Meta",
                      "val": 3,
                    },
                  },
                  "4": {
                    "ann": {
                      "id": 2,
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Row",
                      },
                    },
                    "meta": {
                      "lvl": 2,
                      "type": "Meta",
                      "val": 4,
                    },
                  },
                },
                "sigma": {},
                "zonker": {
                  "1": {
                    "binder": {
                      "annotation": {
                        "id": 31,
                        "type": "Neutral",
                        "value": {
                          "id": 30,
                          "type": "Var",
                          "variable": {
                            "lvl": 1,
                            "type": "Meta",
                            "val": 2,
                          },
                        },
                      },
                      "icit": "Explicit",
                      "type": "Pi",
                      "variable": "obj",
                    },
                    "closure": {
                      "ctx": {
                        "env": [
                          {
                            "name": {
                              "type": "Let",
                              "variable": "proj",
                            },
                            "nf": {
                              "id": 29,
                              "type": "Neutral",
                              "value": {
                                "id": 28,
                                "type": "Var",
                                "variable": {
                                  "lvl": 0,
                                  "type": "Bound",
                                },
                              },
                            },
                            "type": [
                              {
                                "type": "Let",
                                "variable": "proj",
                              },
                              "source",
                              {
                                "id": 27,
                                "type": "Neutral",
                                "value": {
                                  "id": 26,
                                  "type": "Var",
                                  "variable": {
                                    "lvl": 0,
                                    "type": "Meta",
                                    "val": 1,
                                  },
                                },
                              },
                            ],
                          },
                        ],
                        "implicits": [],
                        "metas": {},
                        "sigma": {},
                        "zonker": {},
                      },
                      "term": {
                        "id": 1210,
                        "type": "Var",
                        "variable": {
                          "lvl": 2,
                          "type": "Meta",
                          "val": 3,
                        },
                      },
                      "type": "Closure",
                    },
                    "id": 40,
                    "type": "Abs",
                  },
                  "2": {
                    "arg": {
                      "id": 38,
                      "row": {
                        "label": "x",
                        "row": {
                          "type": "variable",
                          "variable": {
                            "lvl": 2,
                            "type": "Meta",
                            "val": 4,
                          },
                        },
                        "type": "extension",
                        "value": {
                          "id": 37,
                          "type": "Neutral",
                          "value": {
                            "id": 36,
                            "type": "Var",
                            "variable": {
                              "lvl": 2,
                              "type": "Meta",
                              "val": 3,
                            },
                          },
                        },
                      },
                      "type": "Row",
                    },
                    "func": {
                      "id": 35,
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Schema",
                      },
                    },
                    "icit": "Explicit",
                    "id": 39,
                    "type": "App",
                  },
                  "3": {
                    "id": 50,
                    "type": "Var",
                    "variable": {
                      "lvl": 2,
                      "type": "Bound",
                    },
                  },
                  "4": {
                    "id": 47,
                    "type": "Var",
                    "variable": {
                      "lvl": 1,
                      "type": "Bound",
                    },
                  },
                },
              },
              "term": {
                "binding": {
                  "annotation": {
                    "id": 1223,
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "icit": "Implicit",
                  "type": "Pi",
                  "variable": "b",
                },
                "body": {
                  "binding": {
                    "annotation": {
                      "arg": {
                        "id": 1225,
                        "row": {
                          "label": "x",
                          "row": {
                            "type": "variable",
                            "variable": {
                              "index": 1,
                              "type": "Bound",
                            },
                          },
                          "type": "extension",
                          "value": {
                            "id": 1219,
                            "type": "Var",
                            "variable": {
                              "index": 0,
                              "type": "Bound",
                            },
                          },
                        },
                        "type": "Row",
                      },
                      "func": {
                        "id": 1218,
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Schema",
                        },
                      },
                      "icit": "Explicit",
                      "id": 1226,
                      "type": "App",
                    },
                    "icit": "Explicit",
                    "type": "Pi",
                    "variable": "obj",
                  },
                  "body": {
                    "id": 1217,
                    "type": "Var",
                    "variable": {
                      "index": 1,
                      "type": "Bound",
                    },
                  },
                  "id": 1227,
                  "type": "Abs",
                },
                "id": 1228,
                "type": "Abs",
              },
              "type": "Closure",
            },
            "id": 79,
            "type": "Abs",
          },
          "type": "Let",
          "value": {
            "binding": {
              "annotation": {
                "id": 1229,
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Row",
                },
              },
              "icit": "Implicit",
              "type": "Lambda",
              "variable": "a",
            },
            "body": {
              "binding": {
                "annotation": {
                  "id": 1230,
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Type",
                  },
                },
                "icit": "Implicit",
                "type": "Lambda",
                "variable": "b",
              },
              "body": {
                "binding": {
                  "annotation": {
                    "id": 1205,
                    "type": "Var",
                    "variable": {
                      "lvl": 1,
                      "type": "Meta",
                      "val": 2,
                    },
                  },
                  "icit": "Explicit",
                  "type": "Lambda",
                  "variable": "obj",
                },
                "body": {
                  "id": 1237,
                  "label": "x",
                  "term": {
                    "id": 1206,
                    "type": "Var",
                    "variable": {
                      "index": 0,
                      "type": "Bound",
                    },
                  },
                  "type": "Proj",
                },
                "id": 1238,
                "type": "Abs",
              },
              "id": 1239,
              "type": "Abs",
            },
            "id": 1240,
            "type": "Abs",
          },
          "variable": "proj",
        },
      ],
      "type": "Block",
    },
    "type": {
      "id": 109,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Unit",
      },
    },
    "typedTerms": {},
  },
}
`;
